A gental Coming soon page

--- a/coming soon page/index.html
+++ b/coming soon page/index.html
@@ -6,9 +6,9 @@
 	<meta name="keywords" content="Sense8 Sensorium sensorium.online sensates">
 	<meta name="description"content="Sensorium.Online is social networking website Based on the idea of Sensorium | sense8">
 	<meta property="og:title" content="Sensorium.online | Pre-registraion Count Down">
-<meta property="og:description" content="Sensorium.Online is social networking website Based on the idea of Sensorium | sense8">
-<meta property="og:image" content="thumbnail.jpg">
-<meta property="og:url" content="sensorium.online">
+	<meta property="og:description" content="Sensorium.Online is social networking website Based on the idea of Sensorium | sense8">
+	<meta property="og:image" content="thumbnail.jpg">
+	<meta property="og:url" content="sensorium.online">
 	<title>Sensorium.online</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="style.js">
@@ -21,15 +21,12 @@
     <p>SENSORIUM</p>
   </div>
   <div class="middle">
-    <h1 class="doomsday">THE DOOMSDAY CLOCK</h1>
-    <h2>Just kidding! in exactly <i id="date" class="countdown"></i> SENSORIUM WILL BE ONLINE FOR PRE-REGISTRATION PHASE</h2>
-    <h3>SPREAD THE WORD</h3>
+    <h2>SENSORIUM WILL BE ONLINE FOR PRE-REGISTRATION PHASE IN</h2>
 		
-    <h1 class="countdown" id="date1"></h1>
+    <h1 class="countdown" id="date"></h1>
     <hr>
   </div>
   <div class="bottomleft">
-    <p>No!! but seriously IT IS A <b class="doomsday">DOOMSDAY CLOCK</b></p>
     <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
 		<a class="a2a_dd" href="https://www.addtoany.com/share"></a>
 		<a class="a2a_button_facebook"></a>
