Animations on reveal added
WHAT , WHY , WHEN blocks are updated
with siddy's texts

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/css/mdb.min.css" rel="stylesheet">
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-   
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+
     <title>Sensorium</title>
   </head>
   <body>
@@ -24,10 +25,7 @@
     </noscript>
     <div id="root"></div>
     
-    <!-- 
-      Removed these two scripts to the bottom of the body for better rendering and avoiding this error:
-      https://mdbootstrap.com/support/uncaught-typeerror-cannot-read-property-addeventlistener-of-null/
-    -->
+    
     <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- MDB core JavaScript -->
