--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+
+    <meta name="keywords" content="Sense8 Sensorium sensorium.online sensates find cluster">
+    <meta name="description" content="Sensorium.Online is social networking website Based on the idea of Sensorium | sense8">
+    <meta property="og:title" content="Sensorium.online | Pre-registration">
+    <meta property="og:description" content="Sensorium.Online is social networking website based on the idea of Sensorium | sense8">
+    <meta property="og:image" content="thumbnail.jpg">
+    <meta property="og:url" content="sensorium.online">
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
@@ -30,6 +37,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/js/mdb.min.js"></script>
+    <!-- Socials share -->
+    <script async src="https://static.addtoany.com/menu/page.js"></script>
     
   </body>
 </html>
