--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,11 @@
     <meta name="description" content="Sensorium.Online is social networking website Based on the idea of Sensorium | sense8">
     <meta property="og:title" content="Sensorium.online | Pre-registration">
     <meta property="og:description" content="Sensorium.Online is social networking website based on the idea of Sensorium | sense8">
-    <meta property="og:image" content="thumbnail.jpg">
+    <meta property="og:image" content="%PUBLIC_URL%/assets/sense.jpg">
     <meta property="og:url" content="sensorium.online">
+    <meta name="twitter:site" content="@SensoriumApp" />
+    <meta name="twitter:card" value="Sensorium.Online is social networking website based on the idea of Sensorium | sense8" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/assets/sense.jpg" />
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
