profile bar updated
sass watcher  added
using css grid

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/index.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/stylesheets/bootstrap337.min.css" >
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
     <!-- MDB theme -->
     <link href="%PUBLIC_URL%/assets/stylesheets/mdb.min.css" rel="stylesheet">
