--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
 
     <meta name="keywords" content="Sense8 Sensorium sensorium.online sensates find cluster">
     <meta name="description" content="Sensorium.Online is a social networking website based on the idea of Sensorium from the Netflix original Sense8.">
-    <meta property="og:title" content="Sensorium.online | Pre-registration">
+    <meta property="og:title" content="Sensorium.Online | Pre-registration">
     <meta property="og:description" content="Sensorium.Online is a social networking website based on the idea of Sensorium from the Netflix original Sense8.">
     <meta property="og:image" content="%PUBLIC_URL%/assets/sense.jpg">
     <meta property="og:url" content="sensorium.online">
     <meta name="twitter:site" content="@SensoriumApp" />
-    <meta name="twitter:card" value="Sensorium is a social networking website based on the idea of Sensorium from the Netflix original Sense8."/>
+    <meta name="twitter:card" value="Sensorium.Online is a social networking website based on the idea of Sensorium from the Netflix original Sense8."/>
     <meta name="twitter:image" content="%PUBLIC_URL%/assets/sense.jpg" />
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
