more beautifying the profile bar
Line icons added

--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,13 @@
     <meta name="twitter:site" content="@SensoriumApp" />
     <meta name="twitter:card" value="Sensorium.Online is social networking website based on the idea of Sensorium | sense8" />
     <meta name="twitter:image" content="%PUBLIC_URL%/assets/sense.jpg" />
-  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/index.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/stylesheets/bootstrap337.min.css" >
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <!-- MDB theme -->
     <link href="%PUBLIC_URL%/assets/stylesheets/mdb.min.css" rel="stylesheet">
 
