Added favicon and fixed logout function

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,19 @@
     <meta name="twitter:card" value="Sensorium.Online is a social networking website based on the idea of Sensorium from Netflix original series Sense8." />
     <meta name="twitter:image" content="%PUBLIC_URL%/assets/sense.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/index.css">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/assets/favicon/apple-touch-icon.png?v=jw7684YMPB">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/assets/favicon/favicon-32x32.png?v=jw7684YMPB">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/assets/favicon/favicon-16x16.png?v=jw7684YMPB">
+    <link rel="manifest" href="%PUBLIC_URL%/assets/favicon/site.webmanifest?v=jw7684YMPB">
+    <link rel="mask-icon" href="%PUBLIC_URL%/assets/favicon/safari-pinned-tab.svg?v=jw7684YMPB" color="#5bbad5">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v=jw7684YMPB">
+    <meta name="apple-mobile-web-app-title" content="Sensorium">
+    <meta name="application-name" content="Sensorium">
+    <meta name="msapplication-TileColor" content="#ffc40d">
+    <meta name="theme-color" content="#ffffff">
+    <!-- Favicon -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/stylesheets/bootstrap337.min.css" >
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous"> -->
